PwcSF/backup/force-app/main/default/objects/OrderDetail__c/OrderDetail__c.object-meta.xml
<CustomObject>
    <label>OrderDetail</label>
    <nameField>
        <label>OrderDetail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrderDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>