PwcSF/backup/force-app/main/default/objects/OrderDetail__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>OrderDetails</relationshipLabel>
    <relationshipName>OrderDetails</relationshipName>
    <type>Lookup</type>
</CustomField>