PwcSF/backup/force-app/main/default/objects/OrderDetail__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <label>Product Name</label>
    <referenceTo>ProductStore__c</referenceTo>
    <relationshipLabel>OrderDetails</relationshipLabel>
    <relationshipName>OrderDetails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>